force-app/main/default/objects/NI_Invoice__c/NI_Invoice__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-015836

Used by Finance as part of CAPS Royalty and Amortization management</description>
    <label>NI Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NI Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>