force-app/main/default/objects/NI_Invoice__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cluster</label>
    <length>80</length>
    <type>Text</type>
</CustomField>