force-app/main/default/objects/NI_Invoice__c/fields/Franchisor__c.field-meta.xml
<CustomField>
    <fullName>Franchisor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Franchisor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>