force-app/main/default/objects/NI_Invoice__c/fields/Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Management_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Management Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>