force-app/main/default/objects/NI_Invoice__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NI Invoices</relationshipLabel>
    <relationshipName>NI_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>