force-app/main/default/objects/NI_Invoice__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>