force-app/main/default/objects/NI_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Status_Code__c = &quot;O&quot;,&quot;Open&quot;,
IF(Status_Code__c = &quot;P&quot;,&quot;Paid&quot;,
IF(Status_Code__c = &quot;V&quot;,&quot;Void&quot;,&quot;&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>