force-app/main/default/objects/NI_Invoice__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>