force-app/main/default/objects/NI_Invoice__c/fields/Sum_Invoice_Detail_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Sum_Invoice_Detail_Total_Price__c</fullName>
    <description>Sum of the total price of all of the invoice detail records</description>
    <inlineHelpText>Sum of the total price of all of the invoice detail records</inlineHelpText>
    <label>Sum Invoice Detail Total Price</label>
    <summarizedField>NI_Invoice_Detail__c.Total_Price__c</summarizedField>
    <summaryForeignKey>NI_Invoice_Detail__c.NI_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>