force-app/main/default/objects/NI_Invoice__c/fields/Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>